feat: Answers of Question 1 and 2

--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -117,7 +117,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "- *In the *`agent.py`* Python file, choose three flags that can be set and explain how they change the simulation.*\n",
+    "  - learning\n",
+    "    - Whether the agent is expected to learn\n",
+    "  - epsilon\n",
+    "    - Random exploration factor\n",
+    "  - alpha\n",
+    "    - Learning factor \n",
+    "    <br>\n",
+    "    <br>\n",
+    "- *In the *`environment.py`* Python file, what Environment class function is called when an agent performs an action?*\n",
+    "  - act\n",
+    "    <br>\n",
+    "    <br>\n",
+    "  \n",
+    "  \n",
+    "- *In the *`simulator.py`* Python file, what is the difference between the *`'render_text()'`* function and the *`'render()'`* function?*\n",
+    "  - render_text()\n",
+    "    - This is the non-GUI render display of the simulation. Simulated trial data will be rendered in the terminal/command prompt.\n",
+    "  - render()\n",
+    "    - This is the GUI render display of the simulation. Supplementary trial data can be found from render_text.\n",
+    "    <br>\n",
+    "    <br>\n",
+    "- *In the *`planner.py`* Python file, will the *`'next_waypoint()`* function consider the North-South or East-West direction first?*\n",
+    "  - East-West"
    ]
   },
   {
