feat: Answered Question 4

--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -241,10 +241,10 @@
     "**Answer:**\n",
     "\n",
     "- *How frequently is the driving agent making bad decisions? How many of those bad decisions cause accidents?*\n",
-    "  - About 43% of times, the driving agent makes bad decisions. Also, it has about 7% of Major Accident rate, and 5% of Minor Accident rate, total 12% of Accident rate. So, the accident rate caused by the bad deicisions is, 12%/43%, about 28%\n",
+    "  - About 43% of times, the driving agent makes bad decisions. Also, it has about 7% of Major Accident rate, and 5% of Minor Accident rate, total 12% of Accident rate. So, the accident rate caused by the bad deicisions is, 12/43, about 28%\n",
     "  <br>\n",
     "- *Given that the agent is driving randomly, does the rate of reliabilty make sense?*\n",
-    "  - The reliability rate is 0%. Since the agent is driving randomly, it makes sense that the agent never get to the destination in the given deadline. \n",
+    "  - The reliability rate is 0%. Since the agent is driving randomly, it makes sense that the agent rarely get to the destination in the given deadline. \n",
     "  <br>\n",
     "- *What kind of rewards is the agent receiving for its actions? Do the rewards suggest it has been penalized heavily?*\n",
     "  - Average reward per action is negative, and it suggests that the agent has been penalized heavily. It makes sense, since the agent makes bad decisions for 43% rates. \n",
@@ -292,7 +292,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "* Features relevant for learning *safety*\n",
+    "  - all inputs (light, left , right, oncoming)\n",
+    "  - It is very important to follow the driving rules, and to do that, the infomation from inputs are all very important. \n",
+    "* Features relevant for learning *efficiency*\n",
+    "  - waypoint\n",
+    "  - waypoint will lead the agent to the destination, and I don't want the agent to go opposite way of the given waypoint. So it is very important for learning efficiency\n",
+    "\n",
+    "* Features not used\n",
+    "  - deadline\n",
+    "  - Since waypoint is the only information I need to go to the destination, I don't need deadline for learning efficiency. Also, I don't want to break the traffic rules to keep the deadline, since it will make the agent unsafe. So, deadline is not used for learning both *safety* and *efficiency*\n"
    ]
   },
   {
