feat: Answered Question 5

--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -331,7 +331,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "* Light: Green, Red\n",
+    "  - Num of cases : 2  \n",
+    "* Left, Right, Oncoming: Each of them can have (None, left, right, oncoming)\n",
+    "  - Num of cases of Left : 4\n",
+    "  - Num of cases of Right : 4 \n",
+    "  - Num of cases of Oncoming : 4\n",
+    "* waypoint: None, left, right, oncoming \n",
+    "  - Num of cases : 4\n",
+    "\n",
+    "* Size of the state space\n",
+    "  - 2 x 4 x 4 x 4 x 4 = 512  \n",
+    "  \n",
+    "  <br>\n",
+    "  <br>\n",
+    "* I think the size of the state space is too big. To reduce the size, I will create a new \"feature\" which reduce the size, but do not lose the information of the above features. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "* New Feature: Movable Direction \n",
+    " - This feature shows the possible direction the agent can move without breaking traffic rules. \n",
+    " - Possible cases of the feature\n",
+    "   - None, forward, (left, forward), right, (forward, right), (left, right, forward)\n",
+    "   - total 6 cases. \n",
+    "* Size of the new state space\n",
+    " - 6 x 4 = 24 states\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What is reasonable num of trials?"
    ]
   },
   {
