feat: Changed Answer of question 5

--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -347,25 +347,30 @@
     "  \n",
     "  <br>\n",
     "  <br>\n",
-    "* I think the size of the state space is too big. To reduce the size, I will create a new \"feature\" which reduce the size, but do not lose the information of the above features. \n",
-    "\n",
+    "* I think the size of the state space is too big. \n",
+    "  - Even if an agent visit the each state one by one, it will take 512 steps to fully cover it. \n",
+    "  - This means there are high possibility that the agent will get stuck at local minimum.\n",
+    "* I will reduce the state space to make learning more efficient. \n",
+    "<br>\n",
     "<br>\n",
     "\n",
-    "* New Feature: Movable Direction \n",
-    " - This feature shows the possible direction the agent can move without breaking traffic rules. \n",
-    " - Possible cases of the feature\n",
-    "   - None, forward, (left, forward), right, (forward, right), (left, right, forward)\n",
-    "   - total 6 cases. \n",
+    "* *new state*\n",
+    "  - When Green light, since the agent have priority to move,  \n",
+    "    - We don't have to care about the left and right side of the agent. \n",
+    "    - The only traffic the agent should care is oncoming cars. (for left turning)\n",
+    "  - When Red light, \n",
+    "    - The agent can move only to right\n",
+    "    - left side traffic is needed. (for right turning) \n",
+    "* The new state space\n",
+    "  - (Green, No oncoming)\n",
+    "  - (Green, Yes oncoming)\n",
+    "  - (Red, No left)\n",
+    "  - (Red, Yes left)\n",
     "* Size of the new state space\n",
-    " - 6 x 4 = 24 states\n",
+    "  - 4\n",
+    "  \n",
+    "I have reduced the size of state space to 4. This will do the job. \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# What is reasonable num of trials?"
    ]
   },
   {
